# voxel-raymarching

./: .gitignore  Cargo.toml  LICENSE  README.md  renderdoc.cap
app/: Cargo.toml  build.rs
app/src/: app.rs  config.rs  main.rs
app/src/core/: buffers.rs  mod.rs  noise.rs  probes.rs  renderer.rs
app/src/engine/: camera.rs  core.rs
app/src/renderer/: buffers.rs  core.rs  gltf_viewer.rs  loader.rs  mod.rs  noise.rs  utils.rs
app/src/shaders/: ambient.wgsl  ambient_blur.wgsl  ambient_project.wgsl  ambient_reproject.wgsl  ambient_trace.wgsl  atrous.wgsl  chunk_resolve.wgsl  deferred.wgsl  fx.wgsl  lighting_resolve.wgsl  model_test.wgsl  normal_blur.wgsl  palette_lut.wgsl  probe_border.wgsl  probe_trace.wgsl  probe_update.wgsl  probe_visualize.wgsl  raymarch.wgsl  resolve.wgsl  shadow.wgsl  shadow_occlusion.wgsl  specular.wgsl  specular_resolve.wgsl  specular_spatial.wgsl  taa.wgsl  tree.wgsl  visible_indirect_args.wgsl
app/src/ui/: core.rs  debug.rs  mod.rs  renderer.rs  settings.rs
app/src/utils/: mod.rs  shaders.rs
app/src/utils/pipeline/: ext.rs  mod.rs
assets/: cars.vox  winter.vox
generate/: Cargo.toml
generate/src/: lib.rs  lighting.rs  main.rs  models.rs  models_t64.rs  voxelize.rs
generate/src/gltf/: mod.rs  scene.rs  schema.rs
generate/src/shaders/: brdf.wgsl  cubemap.wgsl  double_tree.wgsl  irradiance.wgsl  prefilter.wgsl  tree_64.wgsl  voxelize.wgsl
json/: _res.json  glTF.schema.json  material.normalTextureInfo.schema.json  material.occlusionTextureInfo.schema.json  material.pbrMetallicRoughness.schema.json  t.json  textureInfo.schema.json
loader/: Cargo.toml
loader/src/: lib.rs  main.rs  voxelize.rs
models/: Cargo.toml  monke_out.txt
models/src/: lib.rs  main.rs  schema.rs
src/: app.rs  base.wgsl  camera.rs  cube.rs  main.rs  mesh.rs  model.rs  ui.rs
src/engine/: camera.rs  core.rs  input.rs  mod.rs  model.rs
src/renderer/: brick_tree.rs  buffers.rs  core.rs  mod.rs  nested_tree.rs  quad.rs  tree.rs  tree1.rs
src/shaders/: fx.wgsl  main.wgsl  maina.wgsl
src/ui/: core.rs
utils/: Cargo.toml
utils/src/: lib.rs  textures.rs  tree.rs
utils/src/layout/: ext.rs  mod.rs  texture.rs
utils/src/texture/: ext.rs  mod.rs
vox/: Cargo.toml
