[workspace]
members = ["app", "generate"]
default-members = ["app"]
resolver = "2"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[patch.crates-io]
egui = { git = "https://github.com/SuchAFuriousDeath/egui", branch = "update-wgpu-28" }
egui-wgpu = { git = "https://github.com/SuchAFuriousDeath/egui", branch = "update-wgpu-28" }
egui-winit = { git = "https://github.com/SuchAFuriousDeath/egui", branch = "update-wgpu-28" }
