[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
generate = { path = "../generate" }
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = ["derive"] }
egui = "0.33.3"
egui-wgpu = { version = "0.33.3", features = ["winit"] }
egui-winit = "0.33.3"
env_logger = "0.11.8"
glam = { version = "0.31.0", features = ["serde", "bytemuck"] }
pollster = "0.4.0"
wgpu = "28.0.0"
winit = "0.30.12"
image = { version = "0.25.9", features = ["jpeg", "png"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
flate2 = { version = "1.1.9", features = ["zlib-rs"] }

[build-dependencies]
generate = { path = "../generate" }
anyhow = "1.0.100"
env_logger = "0.11.8"
glam = { version = "0.31.0", features = ["serde", "bytemuck"] }
pollster = "0.4.0"
wgpu = "28.0.0"
prettyplease = "0.2.37"
quote = "1.0.44"
heck = "0.5.0"
syn = "2.0.116"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
flate2 = { version = "1.1.9", features = ["zlib-rs"] }
