[package]
name = "generate"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
byteorder = "1.5.0"
clap = { version = "4.5.57", features = ["derive"] }
image = { version = "0.25.9", features = ["jpeg", "png"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bytemuck = { version = "1.24.0", features = ["derive"] }
env_logger = "0.11.8"
glam = { version = "0.31.0", features = ["serde", "bytemuck"] }
pollster = "0.4.0"
wgpu = "28.0.0"
winit = "0.30.12"
flate2 = { version = "1.1.9", features = ["zlib-rs"] }
